# visual_story_understanding

./: .gitignore  check_env.py  pyproject.toml
container/: visu_env.def
dataset/original/: sis_base.jsonl
dataset/original/shuffle/image_option/: shuffle_data.jsonl
dataset/original/shuffle/text_option/: shuffle_data.jsonl
dataset/original/text_option/pos2/: incorrect_options_3.jsonl
notebook/eda/: analysis.ipynb  comm.ipynb  incorrect.ipynb  ssid.ipynb  vist.ipynb  vist_final.json  vist_final.jsonl
output/: gpt4o.jsonl  payload_report.tsv  payload_stats.txt  qwen2-5-VL-72B.jsonl  qwen2-5-VL.jsonl
output/incorrect_options/: gpt4o.jsonl  payload_stats.txt
output/seq2opt/: payload_stats.txt  qwen2-5-VL-72B.jsonl
output/shuffled_image/: gpt4o.jsonl  payload_stats.txt
output/shuffled_text/: gpt4o.jsonl  payload_stats.txt
shell_scripts/: enter_container.sh  enter_cpu.sh  enter_gpu.sh
src/: calculate_payload.py  dataset.py  eval.py  extract_to_jpg.py  utils.py
src/build_dataset/: build_base_data.py  build_incorrect_options.py  build_shuffle_data.py  build_wrong_options.py
src/eval/: shuffled_eval.py
src/inference/: gpt4o.py  qwen2-5-VL.py
src/inference/seq2opt/: gpt4o.py
src/inference/shuffle/: gpt4o.py
src/inference/shuffled_image/: gpt4o.py
src/inference/shuffled_text/: gpt4o.py
src/utils/: image_processor.py  paths.py  text_processor.py  utils.py
